<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    tools:context=".Main_add"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add"
        android:layout_alignParentLeft="true"
        android:paddingTop="10dp"
        />
    <EditText
        android:id="@+id/title_add2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_add2"
        android:layout_alignParentRight="true"
        android:inputType="textPersonName"

        />
    <TextView
        android:id="@+id/discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discription"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/title_add2"

        />
    <EditText
        android:id="@+id/discription2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:hint="@string/discription2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title_add2"
        android:inputType="textMultiLine"

        />
    <TextView
        android:id="@+id/weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/discription2"

        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discription2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:entries="@array/commobox"
        />
    <TextView
        android:id="@+id/srt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srt_time"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/weekly"/>
    <EditText
        android:id="@+id/srt_time_add"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:hint="@string/srt_time_add"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:inputType="textPersonName"
        android:layout_below="@+id/weekly"
        android:layout_marginTop="30dp"
        android:enabled="false"
        />

    <Button
        android:id="@+id/btnStartTime"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/srt_time_img"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/weekly"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/srt_time_add"/>

    <EditText
        android:id="@+id/end_time_add"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_time_add"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:inputType="textPersonName"
        android:layout_below="@+id/srt_time_add"
        android:layout_marginTop="30dp"
        android:enabled="false"
        />

    <Button
        android:id="@+id/btnEndTime"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/end_time"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/srt_time_add"
        android:layout_marginTop="30dp"
         />
    <Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Save"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/end_time_add"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Back"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/end_time_add"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        />
</RelativeLayout>