<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_add_exam"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:layout_gravity="center"
    android:background="@color/design_default_color_primary">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add"
        android:layout_alignParentLeft="true"
        android:paddingTop="10dp"
        android:textColor="#fff"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_add2"
        android:layout_alignParentRight="true"
        android:inputType="textPersonName"
        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discription"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtTitle"
        android:textColor="#fff"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/txtDiscription"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:hint="@string/discription2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtTitle"
        android:inputType="textMultiLine"
        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date :"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtDiscription"
        android:textColor="#fff"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/txtDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtDiscription"
        android:textColor="#fff"
        />


    <TextView
        android:id="@+id/srt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srt_time"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/weekly"
        android:textColor="#fff"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtStartTime"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:hint="@string/srt_time_add"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:inputType="textPersonName"
        android:layout_below="@+id/weekly"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:enabled="false"
        />

    <Button
        android:id="@+id/_btnStartTime"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/srt_time_img"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/weekly"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtStartTime"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/end_time_add"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_time_add"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:inputType="textPersonName"
        android:layout_below="@+id/txtStartTime"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:enabled="false"
        />

    <Button
        android:id="@+id/_btnEndTime"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/end_time"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtStartTime"
        android:layout_marginTop="30dp"


        />
    <Button
        android:id="@+id/_btnSave"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Save"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/end_time_add"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/_btnBack"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Back"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/end_time_add"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        />



</RelativeLayout>