<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Show"
    android:paddingRight="22dp"
    android:paddingLeft="50dp"
    android:paddingTop="70dp"
    android:layout_gravity="center"
    android:background="@color/design_default_color_primary"
    >


    <TextView

        android:id="@+id/show_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="d"
        android:paddingTop="10dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="25sp"

        />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day"
        android:layout_below="@id/show_txt2"
        android:layout_alignParentLeft="true"
        android:paddingTop="10dp"
        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/show_txt4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="d"
        android:layout_below="@id/show_txt2"
        android:paddingTop="10dp"
        android:layout_alignParentRight="true"

        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srt_time_add"
        android:layout_below="@id/show_txt4"
        android:layout_alignParentLeft="true"

        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/show_txt6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="d"
        android:layout_below="@id/show_txt4"

        android:layout_alignParentRight="true"

        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_below="@id/show_txt6"
        android:layout_alignParentLeft="true"

        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/show_txt8"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="d"
        android:layout_below="@id/show_txt6"

        android:layout_alignParentRight="true"

        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discription"
        android:layout_below="@id/show_txt8"
        android:layout_alignParentLeft="true"

        android:textColor="#fff"

        />
    <TextView
        android:id="@+id/show_txt10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="d"
        android:layout_below="@id/show_txt8"

        android:layout_alignParentRight="true"

        android:textColor="#fff"

        />
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Edit"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/show_txt10"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/edit"
        />
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Delete"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/show_txt10"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:drawableLeft="@drawable/delete"
        />

</RelativeLayout>